--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,13 @@ AZURE_OPENAI_API_VERSION=2025-04-01-preview
 # Server
 HOST=0.0.0.0
 PORT=8000
-PUBLIC_URL=https://your-ngrok-or-public-url.ngrok.io
+PUBLIC_URL=https://your-ngrok-or-public-url.ngrok-free.app
+
+# Azure Voice Live API (Cognitive Services endpoint)
+AZURE_VOICE_LIVE_ENDPOINT=https://agent-svc-project-resource.cognitiveservices.azure.com
+AZURE_VOICE_LIVE_API_VERSION=2025-05-01-preview
+VOICE_LIVE_MODEL=gpt-4o-realtime-preview
+AZURE_TTS_VOICE_NAME=en-US-AriaNeural
 
 # Agent Configuration
 SYSTEM_PROMPT=You are a helpful voice assistant. Be concise and conversational. You are speaking with someone on a phone call.
